syntax = "proto3";

package greeter;

import "google/protobuf/wrappers.proto";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
  google.protobuf.StringValue nickname = 2;
}

message HelloResponse {
  string message = 1;
  google.protobuf.StringValue nickname = 2;
}
